# libiguana

./: Cargo.toml  aasm.arm64  aasm.c  aasm.cpp  build.rs  jimulator.cpp
.github/workflows/: swift-package.yml
examples/: 1-ping.rs  1-quickstart.rs  2-load-kmd.rs  3-start.rs  4-load-s.rs  hello.kmd  hello.s
src/: aasm_output.rs  arm_decoder.rs  environment.rs  error.rs  lib.rs  libiguana.udl  memory_extensions.rs  reader_writer.rs  registers.rs  status.rs  uniffi_array.rs
src/kmdparse_types/: label.rs  line.rs  mod.rs  token.rs  word.rs
swift-extras/: add-binary-resource.diff
