[package]
name = "libiguana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kmdparse = { git = "https://github.com/iguana-debugger/kmdparse.git", version = "0.1.0" }
nom = "7.1.3"

[lib]
crate-type = ["cdylib", "lib"]
name = "libiguana"
