[package]
name = "libiguana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.4", features = ["termination"] }
enum-utils = "0.1.2"
kmdparse = { git = "https://github.com/iguana-debugger/kmdparse.git", version = "0.1.0" }
nom = "7.1.3"
thiserror = "1.0.56"
uniffi = "0.26.1"

[lib]
crate-type = ["staticlib", "lib"]
name = "libiguana"

[build-dependencies]
uniffi = { version = "0.26.1", features = [ "build" ] }
